syntax = "proto3";
package coolcar;
import "google/api/annotations.proto";

option go_package = "coolcar/proto/go/go;trippb";


message Location{
  double latitude = 1;
  double longitude = 2;
}

enum TripStatus{
  TS_NOT_SPECIFIED = 0;
  NOT_STATED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
  PAID = 4;
}



message Trip{
  string start = 1;
  string end = 2;
  int32 duration_sec = 3;
  int32 fee_cent = 4;
  Location start_pos = 5;
  Location end_pos = 6;
  repeated Location path_locations = 7;
  TripStatus status = 8;
}

message GetTripResp{
    string id = 1;
    Trip trip = 2;
}

message GetTripRequest{
  string id = 1;
}

service TripService{
  rpc GetTrip (GetTripRequest) returns (GetTripResp){
    option (google.api.http) = {
      post: "/v1/trip/get"
      body: "*"
    };
  };
}